assets/css/main.css
/* Reset 
----------------------------------------- */
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}
/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}


/* Vars 
----------------------------------------- */
:root {
  /* Dark Theme */
  --bg-color: #171717;
  --bg-color-l: #272727;
  --bg-color-ll: #373737;
  --primary-color: #FFF7E8;
  --primary-color-d: #E8D8C8;
  --border-color: var(--bg-color);
  --shadow-color: 0deg 0% 0%;
  --heading-color: var(--primary-color);
  --text-color: var(--bg-color);

  /* Measures */
  --card-gap: 20px;
  --site-menu-height: 70px;
  --site-gutter: 20px;
  --deck-offset-top: var(--card-gap);

  /* Shadows */
  --shadow-elevation-low:
    0px 0.5px 0.6px hsl(var(--shadow-color) / 0.34),
    0px 0.8px 0.9px -1.2px hsl(var(--shadow-color) / 0.34),
    0px 2px 2.3px -2.5px hsl(var(--shadow-color) / 0.34);
  --shadow-elevation-medium:
    0px 0.5px 0.6px hsl(var(--shadow-color) / 0.36),
    0px 1.6px 1.8px -0.8px hsl(var(--shadow-color) / 0.36),
    0px 4.1px 4.6px -1.7px hsl(var(--shadow-color) / 0.36),
    0px 10px 11.3px -2.5px hsl(var(--shadow-color) / 0.36);
}

@media (min-width: 500px) {
  :root {
    --card-gap: 35px;
    --site-menu-height: 80px;
    --site-gutter: 50px;
  }
}

@media (min-width: 1920px) {
  :root {
    --card-gap: 50px;
  }
}


/* Animations 
----------------------------------------- */
@keyframes bounce {
  0%,30%,50%,to {
    transform: translateY(0)
  }
  20% {
    transform: translateY(-12px)
  }
  40% {
    transform: translateY(-7px)
  }
}

.bounce {
  animation: bounce 1s ease-out 1;
}

@keyframes spin {
  0% {
    transform: rotate(0)
  }
  20% {
    transform: rotate(200deg)
  }
  80%,to {
    transform: rotate(540deg)
  }
}

.spin {
  animation: spin 1s ease-out 1;
}

@keyframes dim {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

.dim {
  animation: dim 0.5s ease-out 1;
}


/* Randomize button 
----------------------------------------- */
.btn {
  background-color: var(--primary-color-d);
  border: none;
  border-radius: 100%;
  box-shadow: var(--shadow-elevation-medium);
  cursor: pointer;
  padding: 20px;
  transform: translateY(-20px);

  &:active {
    background-color: var(--primary-color);
    box-shadow: var(--shadow-elevation-low);
  }
}

.icon-wrap {
  pointer-events: none;
}

.icon {
  aspect-ratio: 1/1;
  color: var(--text-color);
  fill: var(--text-color);
  pointer-events: none;
  width: 32px;
}


/* Base 
----------------------------------------- */
body {
  align-items: center;
  background-color: var(--bg-color);
  display: flex;
  flex-direction: column;
  font-family: system-ui;
  font-size: 1rem;
  height: 100lvh;
  justify-content: center;
  overflow: hidden;
  scroll-behavior: smooth;
}

.sr-only {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

::-webkit-scrollbar {
  display: none;
}


/* Site Menu 
----------------------------------------- */
.site-menu {
  bottom: 0;
  color: var(--heading-color);
  display: grid;
  font-size: 1.25rem;
  height: var(--site-menu-height);
  place-items: center;
  position: fixed;
  text-align: center;
  width: 100%;
  z-index: 10;
}


/* Site Main 
----------------------------------------- */
.site-main {
  position: relative;
  width: 100%;
}

.site-main::before,
.site-main::after {
  background: -webkit-gradient(linear,left top,left bottom,from(rgba(0,0,0,0)),to(var(--bg-color)));
  background: linear-gradient(to bottom,rgba(0,0,0,0) 0, var(--bg-color) 100%);
  bottom: 0;
  content: "";
  height: 40%;
  left: 0;
  pointer-events: none;
  position: absolute;
  width: 100vw;
  z-index: 5;
}

.site-main::after {
  height: 50%;
}


/* Deck
----------------------------------------- */
.deck {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: var(--card-gap);
  height: 100lvh;
  overflow-y: auto;
  padding: var(--deck-offset-top) var(--site-gutter) var(--deck-offset-top);
  scroll-padding-top: calc(var(--deck-offset-top) - 1px);
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
}


/* Card
----------------------------------------- */
.card {
  align-items: center;
  background-color: var(--primary-color);
  border-radius: 16px;
  box-shadow: var(--shadow-elevation-medium);
  color: var(--text-color);
  display: flex;
  flex-shrink: 0;
  font-weight: bold;
  justify-content: center;
  padding: 5px;
  scroll-snap-align: start;
  width: 100%;
}

.card__inner {
  align-items: center;
  aspect-ratio: 3/2;
  border: 10px solid var(--border-color);
  border-radius: 12px;
  display: flex;
  justify-content: center;
  padding: 20px;
  position: relative;
  width: 100%;
}

.card__inner::before,
.card__inner::after {
  content: '';
  display: block;
  height: 100%;
  pointer-events: none;
  position: absolute;
  width: 100%;
}

.card__inner::before {
  border: 10px solid var(--border-color);
}

.card__inner::after {
  border: 10px solid var(--primary-color);
  border-radius: 8px;
}


/* Card modifiers
----------------------------------------- */
.card--end {
  opacity: 0.1;
}

.card--end .card__question {
  font-size: 3rem;
  font-weight: 900;
}


/* Card inner elements
----------------------------------------- */
.card__question {
  font-size: clamp(1.25rem, 0.5rem + 4vw, 1.75rem);
  line-height: 1.25;
  text-align: center;
  text-wrap: balance;
}

.card__id {
  font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
  font-size: 0.875rem;
  position: absolute;
  bottom: 10px;
  right: 15px;
}


/* Breakpoints
----------------------------------------- */
@media (min-width: 500px) {
  body {
    padding-top: var(--site-menu-height);
    padding-bottom: 0;
  }

  .site-menu {
    background-color: var(--bg-color);
    bottom: auto;
    box-shadow: var(--shadow-elevation-medium);
    top: 0;
  }

  .site-main::before {
    height: 20%;
  }

  .site-main::after {
    height: 25%;
  }

  .btn {
    background-color: var(--bg-color-l);
    border-radius: 12px;
    padding: 15px;
    transform: none;

    &:active {
      background-color: var(--bg-color-ll);
    }
  }

  .icon {
    color: var(--primary-color);
    fill: var(--primary-color);
    width: 24px;
  }

  .deck {
    height: calc(100vh - var(--site-menu-height));
  }

  .card {
    max-width: 420px;
  }

  .card__inner {
    padding: 30px;
  }

  .card__id {
    font-size: 1rem;
  }
}

@media (min-width: 1920px) {
  .card {
    max-width: 33.33vw;
    padding: 10px;
  }

  .card__inner {
    border-width: 20px;
  }

  .card__question {
    font-size: 2vw;
  }

  .card__id {
    font-size: 1vw;
  }

  .card--end .card__question {
    font-size: 4vw;
  }
}

